service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
